--- a/index.html
+++ b/index.html
@@ -9,36 +9,23 @@
 </head>
 
 <body>
-    <nav class="top-nav">
-       
+    <header>
+        <div class="navbar">
+            <h1 class="logo">vintage celest</h1>
 
-        <div class="nav-title">
-            <strong>vintage celest</strong>
+            <nav class="menu">
+                <a href="#">Explore</a>
+                <a href="#">Novidade</a>
+                <a href="#">Contrato</a>
+                </nav>
         </div>
+    </header>
 
-        <div class="nav-links(right)">
-            <a href="nav-5">shop men</a>
-            <a href="nav-6">home</a>
-        </div>
-    </nav>
+    <hr>
 
-    <div class="container">
-        <div class="container-2">
-            <h1>vintage celest</h1>
-
-            <h2>quem somos?</h2>
-
-            <p>Somos uma marca que traduz a elegância em sua forma mais pura. Para quem vê a moda como presença, não
-            aparência. O luxo aqui é silencioso, o design intencional. Entre linhas minimalistas e tons sutis, unimos o
-            clássico ao contemporâneo. A Vintage Celest é para quem busca exclusividade e entende que o verdadeiro valor
-            está no que não precisa ser dito.
-            </p>
-        </div>
+    <div class="img-1">
         
-
-        <img src="WhatsApp Image 2025-11-18 at 10.57.32.jpeg" alt="erro em carregar a imagem">
     </div>
-
 </body>
 
 </html>
