linkagem das paginas

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h1 class="logo">vintage celest</h1>
 
             <nav class="menu">
-                <a href="#">Explore</a>
-                <a href="#">Novidade</a>
-                <a href="#">Contrato</a>
+                <a href="explore.html">Explore</a>
+                <a href="novidades.html">Novidade</a>
+                <a href="formulario.html">Formulario</a>
                 </nav>
         </div>
     </header>
