atualizacao das imagens e criacao dos paragrafos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
                 <a href="formulario.html">Formulario</a>
-                </nav>
+            </nav>
         </div>
     </header>
 
@@ -31,6 +31,40 @@
 
     <div class="img-3">
     </div>
+
+    <hr>
+
+    <div class="container-3">
+        <div class="p-left">
+            <strong><p>
+                Quem somos?
+            </p></strong>
+                <br>
+            <p>
+                Somos uma marca que traduz a elegância em sua forma mais pura. Para quem vê a moda como presença, não
+                aparência.
+                O luxo aqui é silencioso, o design intencional. Entre linhas minimalistas e tons sutis, unimos o
+                clássico ao
+                contemporâneo. A Vintage Celest é para quem busca exclusividade e entende que o verdadeiro valor está no
+                que
+                não
+                precisa ser dito.
+            </p>
+        </div>
+
+        <div class="p-right">
+            <strong><p>
+                Assine para newreleases
+            </p></strong>
+                <br>
+            <p>
+                Assine a newreleases da Vintage celest para obter informações sobre coleções e outras atualizações
+                exclusivas.
+            </p>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
