mudança no arquivo style e no index

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <header>
         <div class="navbar">
-            <h1 class="logo">vintage celest</h1>
-
+            <a href=""><h1 class="logo">vintage celest</h1></a>
             <nav class="menu">
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
