--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="navbar">
-            <a href=""><h1 class="logo">vintage celest</h1></a>
+            <a href="">
+                <h1 class="logo">vintage celest</h1>
+            </a>
             <nav class="menu">
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
@@ -35,10 +37,12 @@
 
     <div class="container-3">
         <div class="p-left">
-            <strong><p>
-                Quem somos?
-            </p></strong>
-                <br>
+            <strong>
+                <p>
+                    Quem somos?
+                </p>
+            </strong>
+            <br>
             <p>
                 Somos uma marca que traduz a elegância em sua forma mais pura. Para quem vê a moda como presença, não
                 aparência.
@@ -52,16 +56,29 @@
         </div>
 
         <div class="p-right">
-            <strong><p>
-                Assine para newreleases
-            </p></strong>
-                <br>
+            <strong>
+                <p>
+                    Assine para newreleases
+                </p>
+            </strong>
+            <br>
             <p>
                 Assine a newreleases da Vintage celest para obter informações sobre coleções e outras atualizações
                 exclusivas.
             </p>
         </div>
     </div>
+    <hr>
+    <div class="footer">
+        <p>
+            Enviando para: Brasil
+        </p>
+        <br>
+        <p>
+            Idioma: Portuguese
+        </p>
+    </div>
+
 
 
 </body>
