--- a/formulario.html
+++ b/formulario.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="navbar">
+            <h1 class="logo">Vintage celest</h1>
+
+            <nav class="menu">
+                <a href="explore.html">Explore</a>
+                <a href="novidades.html">Novidade</a>
+                <a href="formulario.html">Formulario</a>
+                </nav>
+        </div>
+    </header>
     
 </body>
 </html>
