atualizacao 1.2 (mudancas nos paragrafos e nas divisoes)

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
             Idioma: Portuguese
         </p>
     </div>
+    <div class="direitos">
+        <hr>
+        <p>
+            © 2025 Vintage Celest
+        </p>
+    </div>
 
 
 
