atualizacao 1.2 (troca de cores das navegacoes e criacao da 2 pagina metade pronta)

--- a/bags.html
+++ b/bags.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bags</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -15,9 +17,41 @@
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
                 <a href="formulario.html">Formulario</a>
-                </nav>
+            </nav>
         </div>
     </header>
-    
+    <hr>
+
+    <div class="navs">
+        Bags / Celestine Noir
+    </div>
+    <hr>
+
+    <div class="container-all">
+        <div class="container-left">
+
+            <div class="left">
+                <img src="Assets/image 1.png">
+                <img src="Assets/image 5.png">
+            </div>
+        </div>
+
+        <div class="container-right">
+            <div class="right">
+                <div class="right">
+                    <div class="details">
+                    </div>
+                    <h2>CELESTINE NOIR MEDIUM IN BLACK</h2>
+                </div>
+
+                <p>The Midnight Voyage Duffel in matte black leather, subtle steel hardware</p>
+                <p>PRODUCT DETAILS</p>
+                <p>DIMENSIONS</p>
+                <p>SUSTAINABILITY</p>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
