Adição de Fonte do Google no Head

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vintage celest</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -76,12 +77,6 @@
         <br>
         <p>
             Idioma: Portuguese
-        </p>
-    </div>
-    <div class="direitos">
-        <hr>
-        <p>
-            © 2025 Vintage Celest
         </p>
     </div>
 
