--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="navbar">
             <a href="">
-                <h1 class="logo">vintage celest</h1>
+                <h1 class="logo">VINTAGE CELEST</h1>
             </a>
             <nav class="menu">
                 <a href="explore.html">Explore</a>
