--- a/bags.html
+++ b/bags.html
@@ -11,8 +11,9 @@
 <body>
     <header>
         <div class="navbar">
-            <h1 class="logo">Vintage celest</h1>
-
+            <a href="">
+                <h1 class="logo">VINTAGE CELEST</h1>
+            </a>
             <nav class="menu">
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
