--- a/novidades.html
+++ b/novidades.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
         <div class="navbar">
-            <h1 class="logo">Vintage celest</h1>
-
+            <a href="">
+                <h1 class="logo">VINTAGE CELEST</h1>
+            </a>
             <nav class="menu">
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
                 <a href="formulario.html">Formulario</a>
-                </nav>
+            </nav>
         </div>
     </header>
 </body>
