--- a/shoes.html
+++ b/shoes.html
@@ -9,13 +9,14 @@
 <body>
     <header>
         <div class="navbar">
-            <h1 class="logo">Vintage celest</h1>
-
+            <a href="">
+                <h1 class="logo">VINTAGE CELEST</h1>
+            </a>
             <nav class="menu">
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
                 <a href="formulario.html">Formulario</a>
-                </nav>
+            </nav>
         </div>
         <hr>
     </header>
