--- a/bags.html
+++ b/bags.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="">
+            <a href="index.html">
                 <h1 class="logo">VINTAGE CELEST</h1>
             </a>
             <nav class="menu">
