--- a/novidades.html
+++ b/novidades.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <div class="navbar">
-            <a href="">
+            <a href="index.html">
                 <h1 class="logo">VINTAGE CELEST</h1>
             </a>
             <nav class="menu">
