--- a/shoes.html
+++ b/shoes.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="">
+            <a href="index.html">
                 <h1 class="logo">VINTAGE CELEST</h1>
             </a>
             <nav class="menu">
