finalizacao da bags

--- a/bags.html
+++ b/bags.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bags</title>
+    <title> Bags</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <div class="navbar">
-            <a href="index.html">
-                <h1 class="logo">VINTAGE CELEST</h1>
-            </a>
+            <h1 class="logo">Vintage celest</h1>
+
             <nav class="menu">
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
@@ -29,30 +28,54 @@
     <hr>
 
     <div class="container-all">
-        <div class="container-left">
 
-            <div class="left">
-                <img src="Assets/image 1.png">
-                <img src="Assets/image 5.png">
-            </div>
+
+        <div class="left">
+            <img src="Assets/image 1.png" class="img-top">
+            <img src="Assets/image 5.png" class="img-bottom">
         </div>
 
-        <div class="container-right">
-            <div class="right">
-                <div class="right">
-                    <div class="details">
-                    </div>
-                    <h2>CELESTINE NOIR MEDIUM IN BLACK</h2>
+        <div class="right">
+
+            <div class="title-bags">
+
+                <h2>CELESTINE NOIR MEDIUM IN BLACK</h2>
+
+                <p class="paragrafo-bags">
+                    The Midnight Voyage Duffel in matte black leather, subtle steel hardware
+                </p>
+
+                <p class="paragrafo-bags-2">Only 1 item left</p>
+
+                <p class="paragrafo-bags-3">Guaranteed delivery time: from 2 to 5 working days</p>
+
+                <div class="divisor"></div>
+
+                <div class="itens">
+                    <span>PRODUCT DETAILS</span>
+                    <span class="seta">▶</span>
                 </div>
 
-                <p>The Midnight Voyage Duffel in matte black leather, subtle steel hardware</p>
-                <p>PRODUCT DETAILS</p>
-                <p>DIMENSIONS</p>
-                <p>SUSTAINABILITY</p>
+                <div class="divisor"></div>
+
+                <div class="itens">
+                    <span>DIMENSIONS</span>
+                    <span class="seta">▶</span>
+                </div>
+
+                <div class="divisor"></div>
+
+                <div class="itens">
+                    <span>SUSTAINABILITY</span>
+                    <span class="seta">▶</span>
+                </div>
+
+                <div class="divisor"></div>
+
             </div>
+
         </div>
     </div>
-
 </body>
 
 </html>
