finalizacao da shoes

--- a/shoes.html
+++ b/shoes.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -21,7 +23,61 @@
         <hr>
     </header>
 
-    
+    <div class="navs">
+        Bags / Celestine Noir
+    </div>
+    <hr>
+
+    <div class="container-all">
+
+
+        <div class="left">
+            <img src="Assets/image 2.png" class="img-top">
+            <img src="Assets/image 6.png" class="img-bottom">
+        </div>
+
+        <div class="right">
+
+            <div class="title-bags">
+
+                <h2>Noir Eclipse Boot</h2>
+
+                <p class="paragrafo-bags">
+                    Black Side-Zip Ankle Boot em couro polido
+                </p>
+
+                <p class="paragrafo-bags-2">Only 1 item left</p>
+
+                <p class="paragrafo-bags-3">Guaranteed delivery time: from 2 to 5 working days</p>
+
+                <div class="divisor"></div>
+
+                <div class="itens">
+                    <span>PRODUCT DETAILS</span>
+                    <span class="seta">▶</span>
+                </div>
+
+                <div class="divisor"></div>
+
+                <div class="itens">
+                    <span>DIMENSIONS</span>
+                    <span class="seta">▶</span>
+                </div>
+
+                <div class="divisor"></div>
+
+                <div class="itens">
+                    <span>SUSTAINABILITY</span>
+                    <span class="seta">▶</span>
+                </div>
+
+                <div class="divisor"></div>
+
+            </div>
+
+        </div>
+    </div>
 
 </body>
+
 </html>
