--- a/formulario.html
+++ b/formulario.html
@@ -21,5 +21,31 @@
         </div>
     </header>
     
+    <div class="formulario">
+        
+        <h2>Entre na fila de espera para a próxima compra.</h2>
+
+        <span class="informacao-necessaria">*Campo obrigatório</span>
+
+    </div>
+
+    <form>
+        <label>Nome</label>
+        <input type="text">
+
+        <label>E-mail*</label>
+        <input type="email">
+
+        <label>CPF</label>
+        <input type="text">
+
+        <button type="submit">Submit</button>
+    </form>
+
+
+
+    </div>
+
+
 </body>
 </html>
