arrumando completamente o formulario

--- a/formulario.html
+++ b/formulario.html
@@ -20,32 +20,45 @@
             </nav>
         </div>
         </div>
-    </header>
-    
-    <div class="formulario">
-        
-        <h2>Entre na fila de espera para a próxima compra.</h2>
+<div class="form-wrapper">
 
+
+    <div class="formulario">
+        <h2>Entre na fila de espera<br>para a próxima compra.</h2>
         <span class="informacao-necessaria">*Campo obrigatório</span>
 
+        <form>
+            <label>Nome</label>
+            <input type="text">
+
+            <label>E-mail*</label>
+            <input type="email">
+
+            <label>CPF</label>
+            <input type="text">
+
+            <button type="submit">Submit</button>
+        </form>
     </div>
 
-    <form>
-        <label>Nome</label>
-        <input type="text">
+    <!-- LINHA DIVISÓRIA -->
+    <div class="divider"></div>
 
-        <label>E-mail*</label>
-        <input type="email">
+    <!-- DIREITA -->
+    <div class="info-lateral">
+        <h2>Entre fila de espera</h2>
+        <p class="garantia">Ao entrar na lista, você garante:</p>
 
-        <label>CPF</label>
-        <input type="text">
-
-        <button type="submit">Submit</button>
-    </form>
-
-
-
+        <ul>
+            <li>Acesso antecipado aos próximos lançamentos</li>
+            <li>Prioridade nos drops mais disputados</li>
+            <li>Notificação imediata quando a peça estiver disponível</li>
+            <li>Reserva limitada para membros da lista</li>
+            <li>Atualizações exclusivas direto da marca</li>
+        </ul>
     </div>
+
+</div>
 
 
 </body>
