arrumando conteudo do formulario

--- a/formulario.html
+++ b/formulario.html
@@ -8,24 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <a href="index.html">
-                <h1 class="logo">VINTAGE CELEST</h1>
-            </a>
-            <nav class="menu">
-                <a href="explore.html">Explore</a>
-                <a href="novidades.html">Novidade</a>
-                <a href="formulario.html">Formulario</a>
-            </nav>
-        </div>
-        </div>
-<div class="form-wrapper">
-
-
-    <div class="formulario">
+<section class="container-form">
+    
+    <div class="left-form">
         <h2>Entre na fila de espera<br>para a próxima compra.</h2>
-        <span class="informacao-necessaria">*Campo obrigatório</span>
+        <span class="info-obrigatorio">*Campo obrigatório</span>
 
         <form>
             <label>Nome</label>
@@ -41,25 +28,50 @@
         </form>
     </div>
 
-    <!-- LINHA DIVISÓRIA -->
-    <div class="divider"></div>
-
-    <!-- DIREITA -->
-    <div class="info-lateral">
-        <h2>Entre fila de espera</h2>
-        <p class="garantia">Ao entrar na lista, você garante:</p>
+    <div class="right-info">
+        <h3>Entre fila de espera</h3>
+        <p>Ao entrar na lista, você garante:</p>
 
         <ul>
             <li>Acesso antecipado aos próximos lançamentos</li>
             <li>Prioridade nos drops mais disputados</li>
-            <li>Notificação imediata quando a peça estiver disponível</li>
+            <li>Notificação imediata quando o item estiver disponível</li>
             <li>Reserva limitada para membros da lista</li>
             <li>Atualizações exclusivas direto da marca</li>
         </ul>
     </div>
 
-</div>
+</section>
 
+<hr class="divisor">
 
+<section class="sobre">
+    <div class="quem-somos">
+        <h4>Quem somos?</h4>
+        <p>
+            Somos uma marca que traduz a elegância em sua forma mais pura. 
+            Para quem vê a moda como presença, não aparência. 
+            Do luxo atual e silencioso, do design refinado. 
+            Criamos linhas minimalistas e tons suaves, unimos o clássico ao contemporâneo.
+        </p>
+    </div>
+
+    <div class="newsletter">
+        <h4>Assine para newreleases</h4>
+        <p>
+            Assine a newreleases da Vintage Celest para obter informações sobre coleções
+            e outras atualizações exclusivas.
+        </p>
+
+        <label>E-mail*</label>
+        <input type="email">
+    </div>
+</section>
+
+<footer>
+    <p>© 2025 Vintage Celest</p>
+    <p>Enviando para: <a href="#">Brasil</a></p>
+    <p>Idioma: <a href="#">Português</a></p>
+</footer>
 </body>
 </html>
