--- a/explore.html
+++ b/explore.html
@@ -21,8 +21,11 @@
         </div>
     </header>
     
-    <div class="container-">
+    <div class="container-explore">
+        <img src="Assets/image 3.png" alt="">
+    </div>
 
+    <div class="divisor-2">
     </div>
 
 </body>
