arrumando a header do formulario

--- a/formulario.html
+++ b/formulario.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <header>
+        <div class="navbar">
+            <a href="index.html">
+                <h1 class="logo">VINTAGE CELEST</h1>
+            </a>
+            <nav class="menu">
+                <a href="explore.html">Explore</a>
+                <a href="novidades.html">Novidade</a>
+                <a href="formulario.html">Formulario</a>
+            </nav>
+        </div>
+    </header>
+    
 <section class="container-form">
     
     <div class="left-form">
