adição de alguns comandos no arquivo style2.css, e começo do codigo novidades.html, tambem adiçao da imagem 7

--- a/novidades.html
+++ b/novidades.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novidade</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
         <div class="navbar">
@@ -17,6 +17,8 @@
                 <a href="formulario.html">Formulario</a>
             </nav>
         </div>
+
+        <div class="img-7"></div>
     </header>
 </body>
 </html>
