--- a/bags.html
+++ b/bags.html
@@ -50,28 +50,28 @@
 
                 <p class="paragrafo-bags-3">Guaranteed delivery time: from 2 to 5 working days</p>
 
-                <div class="divisor"></div>
+                <div class="divisor-3"></div>
 
                 <div class="itens">
                     <span>PRODUCT DETAILS</span>
                     <span class="seta">▶</span>
                 </div>
 
-                <div class="divisor"></div>
+                <div class="divisor-3"></div>
 
                 <div class="itens">
                     <span>DIMENSIONS</span>
                     <span class="seta">▶</span>
                 </div>
 
-                <div class="divisor"></div>
+                <div class="divisor-3"></div>
 
                 <div class="itens">
                     <span>SUSTAINABILITY</span>
                     <span class="seta">▶</span>
                 </div>
 
-                <div class="divisor"></div>
+                <div class="divisor-3"></div>
 
             </div>
 
