criação de div no arquivo novidades

--- a/novidades.html
+++ b/novidades.html
@@ -18,6 +18,7 @@
                 <a href="formulario.html">Formulario</a>
             </nav>
         </div>
+        <div></div>
 
         <div class="img-7"></div>
     </header>
