--- a/formulario.html
+++ b/formulario.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -21,44 +24,44 @@
             </nav>
         </div>
     </header>
-    
-<section class="container-form">
-    
-    <div class="left-form">
-        <h2>Entre na fila de espera<br>para a próxima compra.</h2>
-        <span class="info-obrigatorio">*Campo obrigatório</span>
 
-        <form>
-            <label>Nome</label>
-            <input type="text">
+    <section class="container-form">
 
-            <label>E-mail*</label>
-            <input type="email">
+        <div class="left-form">
+            <h2>Entre na fila de espera<br>para a próxima compra.</h2>
+            <span class="info-obrigatorio">*Campo obrigatório</span>
 
-            <label>CPF</label>
-            <input type="text">
+            <form>
+                <label>Nome</label>
+                <input type="text">
 
-            <button type="submit">Submit</button>
-        </form>
-    </div>
+                <label>E-mail*</label>
+                <input type="email">
 
-    <div class="right-info">
-        <h3>Entre fila de espera</h3>
-        <p>Ao entrar na lista, você garante:</p>
+                <label>CPF</label>
+                <input type="text">
 
-        <ul>
-            <li>Acesso antecipado aos próximos lançamentos</li>
-            <li>Prioridade nos drops mais disputados</li>
-            <li>Notificação imediata quando o item estiver disponível</li>
-            <li>Reserva limitada para membros da lista</li>
-            <li>Atualizações exclusivas direto da marca</li>
-        </ul>
-    </div>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
 
-</section>
+        <div class="right-info">
+            <h3>Entre fila de espera</h3>
+            <p>Ao entrar na lista, você garante:</p>
 
-<hr>
-   <div class="container-3">
+            <ul>
+                <li>Acesso antecipado aos próximos lançamentos</li>
+                <li>Prioridade nos drops mais disputados</li>
+                <li>Notificação imediata quando o item estiver disponível</li>
+                <li>Reserva limitada para membros da lista</li>
+                <li>Atualizações exclusivas direto da marca</li>
+            </ul>
+        </div>
+
+    </section>
+
+    <hr>
+    <div class="container-3">
         <div class="p-left">
             <strong>
                 <p>
@@ -102,4 +105,5 @@
         </p>
     </div>
 </body>
+
 </html>
