--- a/explore.html
+++ b/explore.html
@@ -26,7 +26,16 @@
         <img src="Assets/image 3.png" alt="">
     </div>
 
-    <div class="divisor-2">
+    <div class="divisor-2"></div>
+
+    <div class="container-explore-2">
+        <div class="container-ex-right">
+            <h3>WHAT ARE DREAMS?</h3>
+        </div>
+
+        <div class="container-ex-left">
+            <img src="Assets/b2cba563f3b66e6dda6d3950a79f37b23a6512f3.png" alt="">
+        </div>
     </div>
 
 </body>
