mudanças no arquivo novidades e no arquivo style2css

--- a/novidades.html
+++ b/novidades.html
@@ -1,26 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novidade</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
+    <title>novidades</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-        <div class="navbar">
-            <a href="index.html">
-                <h1 class="logo">VINTAGE CELEST</h1>
-            </a>
-            <nav class="menu">
-                <a href="explore.html">Explore</a>
-                <a href="novidades.html">Novidade</a>
-                <a href="formulario.html">Formulario</a>
-            </nav>
-        </div>
-        <div></div>
-
-        <div class="img-7"></div>
+    <header class="navbar">
+        <a href="index.html">
+        <h1 class="logo">VINTAGE CELEST</h1>
+        </a>
+        <nav>
+            <a href="explore.html">Explore</a>
+            <a href="novidades.html">Novidade</a>
+            <a href="formulario.html">Formulario</a>
+        </nav>
     </header>
+
+    <section class="banner">
+        <img src="Assets/image 7.png" alt="Sapato Principal">
+    </section>
+
+    <section class="grid">
+        <div class="grid-item"><img src="Assets/image 8.png" alt=""></div>
+        <div class="grid-item"><img src="Assets/image 9.png" alt=""></div>
+    </section>
+
+    <section class="banner-large">
+        <img src="Assets/image 10.png " alt="">
+    </section>
+
+    <footer class="footer">
+        <div class="footer-section">
+            <h3>Quem somos?</h3>
+            <p>
+                Nossa marca tem como missão oferecer produtos únicos e cheios de estilo.
+                Cada peça é cuidadosamente criada para proporcionar conforto e personalidade.
+            </p>
+        </div>
+
+        <div class="footer-section">
+            <h3>Acompanhe as novidades</h3>
+            <p>
+                Cadastre seu e-mail para receber lançamentos,<br>
+                dicas de estilo e promoções exclusivas.
+            </p>
+        </div>
+    </footer>
+
+    <div class="footer-bottom">
+        <p>© 2025 VINTAGE CELEST</p>
+        <p>Termos & Privacidade</p>
+    </div>
+
 </body>
 </html>
