alinhamento dos textos da page novidades

--- a/novidades.html
+++ b/novidades.html
@@ -1,14 +1,16 @@
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>novidades</title>
     <link rel="stylesheet" href="style2.css">
 </head>
+
 <body>
     <header class="navbar">
         <a href="index.html">
-        <h1 class="logo">VINTAGE CELEST</h1>
+            <h1 class="logo">VINTAGE CELEST</h1>
         </a>
         <nav>
             <a href="explore.html">Explore</a>
@@ -34,16 +36,18 @@
         <div class="footer-section">
             <h3>Quem somos?</h3>
             <p>
-                Nossa marca tem como missão oferecer produtos únicos e cheios de estilo.
-                Cada peça é cuidadosamente criada para proporcionar conforto e personalidade.
+                Somos uma marca que traduz a elegância em sua <br> forma mais pura. Para quem vê a moda como presença, <br> não
+                aparência. O luxo aqui é silencioso, o design <br> intencional. Entre linhas minimalistas e tons sutis, <br>
+                unimos o clássico ao contemporâneo. A Vintage Celest <br> é para quem busca exclusividade e entende que o <br>
+                verdadeiro valor está no que não precisa ser dito.
             </p>
         </div>
 
         <div class="footer-section">
-            <h3>Acompanhe as novidades</h3>
+            <h3>Assine para newreleases</h3>
             <p>
-                Cadastre seu e-mail para receber lançamentos,<br>
-                dicas de estilo e promoções exclusivas.
+                Assine a newreleases da Vintage celest <br> para obter informações sobre coleções e <br> outras atualizações
+                exclusivas.
             </p>
         </div>
     </footer>
@@ -51,7 +55,9 @@
     <div class="footer-bottom">
         <p>© 2025 VINTAGE CELEST</p>
         <p>Termos & Privacidade</p>
+
     </div>
 
 </body>
+
 </html>
