atulizacoes 1.4 (arrumando as headers)

--- a/explore.html
+++ b/explore.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -21,7 +25,6 @@
         </div>
         </div>
     </header>
-    
     <div class="container-explore">
         <img src="Assets/image 3.png" alt="">
     </div>
@@ -29,14 +32,34 @@
     <div class="divisor-2"></div>
 
     <div class="container-explore-2">
-        <div class="container-ex-right">
-            <h3>WHAT ARE DREAMS?</h3>
-        </div>
 
         <div class="container-ex-left">
             <img src="Assets/b2cba563f3b66e6dda6d3950a79f37b23a6512f3.png" alt="">
         </div>
+
+        <div class="container-ex-right">
+            <h3>WHAT ARE DREAMS?</h3>
+            <p>
+                A Vintage Celest apresenta “Where Clouds Breathe”, um curta e série fotográfica que mergulha no surreal
+                das nuvens esse espaço onde o real se desfaz e o imaginário toma forma. Filmado em tons suaves e
+                sombreados, o projeto captura figuras envoltas em névoa, símbolos celestes e atmosferas enigmáticas que
+                refletem a essência da marca: luxo silencioso, poesia suspensa e mistério etéreo que vive entre uma
+                nuvem e outra
+            </p>
+        </div>
+    </div>
+    <div class="divisor-2"></div>
+
+    <div class="container-3">
+        <div class="container-ex-left-2">
+
+        </div>
+
+        <div class="container-ex-right-2">
+
+        </div>
     </div>
 
 </body>
+
 </html>
