--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html">
                 <h1 class="logo">VINTAGE CELEST</h1>
             </a>
-            <nav class="menu">
+            <nav>
                 <a href="explore.html">Explore</a>
                 <a href="novidades.html">Novidade</a>
                 <a href="formulario.html">Formulario</a>
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <hr>
+    <div class="divisor-2"></div>
 
     <div class="img-1">
     </div>
