fix: alterando nome logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="navbar">
             <a href="index.html">
-                <h1 class="logo">VINTAGE CELESTE</h1>
+                <h1 class="logo">VINTAGE CELEST</h1>
             </a>
             <nav>
                 <a href="explore.html">Explore</a>
