adicao do email

--- a/explore.html
+++ b/explore.html
@@ -50,13 +50,35 @@
     </div>
     <div class="divisor-2"></div>
 
-    <div class="container-3">
+    <div class="container-ex-3">
         <div class="container-ex-left-2">
+            <h3>
+                Quem somos?
+            </h3>
 
+            <p>
+                Somos uma marca que traduz a elegância em sua forma mais pura. Para quem vê a moda como presença, não
+                aparência. O luxo aqui é silencioso, o design intencional. Entre linhas minimalistas e tons sutis,
+                unimos o clássico ao contemporâneo. A Vintage Celest é para quem busca exclusividade e entende que o
+                verdadeiro valor está no que não precisa ser dito.
+            </p>
         </div>
 
         <div class="container-ex-right-2">
+            <h3>
+                Assine para newreleases
+            </h3>
 
+            <p>
+                Assine a newreleases da Vintage celest para obter informações sobre coleções e outras atualizações
+                exclusivas.
+            </p>
+
+            <div class="input-wrapper">
+                <label for="email">E-mail*</label>
+                <input type="email" id="email" placeholder="">
+                <span class="arrow">→</span>
+            </div>
         </div>
     </div>
 
