mudanças no arquivo novidades

--- a/novidades.html
+++ b/novidades.html
@@ -49,9 +49,15 @@
                 Assine a newreleases da Vintage celest <br> para obter informações sobre coleções e <br> outras atualizações
                 exclusivas.
             </p>
+            <br>
+            <div class="input-wrapper">
+                <label for="email">E-mail*</label>
+                <input type="email" id="email" placeholder="">
+                <span class="arrow">→</span>
+            </div>
         </div>
     </footer>
-
+    
     <div class="footer-bottom">
         <p>© 2025 VINTAGE CELEST</p>
         <p>Termos & Privacidade</p>
