atualizacao 1.5 (explore finalizado)

--- a/explore.html
+++ b/explore.html
@@ -81,6 +81,27 @@
             </div>
         </div>
     </div>
+    <div class="divisor-2"></div>
+
+    <div class="footer-explore">
+        <p>
+            Enviando para: Brasil
+        </p>
+
+        <p>
+            Idioma: Portuguese
+        </p>
+
+        <div class="divisor-2"></div>
+
+
+    </div>
+
+    <div class="p-explore">
+        <p>
+            © 2025 Vintage Celest
+        </p>
+    </div>
 
 </body>
 
