--- a/explore.html
+++ b/explore.html
@@ -66,7 +66,7 @@
 
         <div class="container-ex-right-2">
             <h3>
-                Assine para newreleases
+                Assine para Newreleases
             </h3>
 
             <p>
