mudança no footer da pagina novidades

--- a/novidades.html
+++ b/novidades.html
@@ -57,6 +57,17 @@
             </div>
         </div>
     </footer>
+
+    <div class="footer-explore">
+        <p>
+            Enviando para: Brasil
+        </p>
+
+        <p>
+            Idioma: Portuguese
+        </p>
+
+        <div class="divisor-2"></div>
     <div class="footer-bottom">
         <p>© 2025 VINTAGE CELEST</p>
         <p>Termos & Privacidade</p>
