criacao do formulario e ajustes finais

--- a/formulario.html
+++ b/formulario.html
@@ -28,7 +28,8 @@
     <section class="container-form">
 
         <div class="left-form">
-            <h2>Entre na fila de espera<br>para a próxima compra.</h2>
+            <h2>Entre na fila de espera</h2>
+            <h2>para a próxima compra.</h2>
             <span class="info-obrigatorio">*Campo obrigatório</span>
 
             <form>
@@ -63,12 +64,10 @@
     <hr>
     <div class="container-3">
         <div class="p-left">
-            <strong>
-                <p>
-                    Quem somos?
-                </p>
-            </strong>
-            <br>
+            <h3>
+                Quem somos?
+            </h3>
+
             <p>
                 Somos uma marca que traduz a elegância em sua forma mais pura. Para quem vê a moda como presença, não
                 aparência.
@@ -82,12 +81,10 @@
         </div>
 
         <div class="p-right">
-            <strong>
-                <p>
-                    Assine para newreleases
-                </p>
-            </strong>
-            <br>
+            <h3>
+                Assine para newreleases
+            </h3>
+
             <p>
                 Assine a newreleases da Vintage celest para obter informações sobre coleções e outras atualizações
                 exclusivas.
@@ -99,11 +96,14 @@
         <p>
             Enviando para: Brasil
         </p>
-        <br>
+
         <p>
             Idioma: Portuguese
         </p>
     </div>
+    <p>
+        © 2025 Vintage Celest
+    </p>
 </body>
 
 </html>
