ajustes finais na pagina novidades

--- a/novidades.html
+++ b/novidades.html
@@ -32,6 +32,59 @@
         <img src="Assets/image 10.png " alt="">
     </section>
 
+    <div class="container-ex-3">
+        <div class="container-ex-left-2">
+            <h3>
+                Quem somos?
+            </h3>
+
+            <p>
+                Somos uma marca que traduz a elegância em sua forma mais pura. Para quem vê a moda como presença, não
+                aparência. O luxo aqui é silencioso, o design intencional. Entre linhas minimalistas e tons sutis,
+                unimos o clássico ao contemporâneo. A Vintage Celest é para quem busca exclusividade e entende que o
+                verdadeiro valor está no que não precisa ser dito.
+            </p>
+        </div>
+
+        <div class="container-ex-right-2">
+            <h3>
+                Assine para Newreleases
+            </h3>
+
+            <p>
+                Assine a newreleases da Vintage celest para obter informações sobre coleções e outras atualizações
+                exclusivas.
+            </p>
+
+            <div class="input-wrapper">
+                <label for="email">E-mail*</label>
+                <input type="email" id="email" placeholder="">
+                <span class="arrow">→</span>
+            </div>
+        </div>
+    </div>
+    <div class="divisor-2"></div>
+
+    <div class="footer-explore">
+        <p>
+            Enviando para: Brasil
+        </p>
+
+        <p>
+            Idioma: Portuguese
+        </p>
+
+        <div class="divisor-2"></div>
+
+
+    </div>
+
+    <div class="p-explore">
+        <p>
+            © 2025 Vintage Celest
+        </p>
+    </div>
+
 
 </body>
 
