comentando (divisao dos comentarios e organizacao)

--- a/formulario.html
+++ b/formulario.html
@@ -61,7 +61,7 @@
 
     </section>
 
-    <hr>
+    <div class="divisor-2"></div>
     <div class="container-3">
         <div class="p-left">
             <h3>
@@ -91,7 +91,9 @@
             </p>
         </div>
     </div>
-    <hr>
+     
+    <div class="divisor-2"></div>
+
     <div class="footer">
         <p>
             Enviando para: Brasil
