--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>vintage celest</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Archivo:wght@600&family=Playfair+Display:wght@400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -69,14 +71,23 @@
             </p>
         </div>
     </div>
-    <hr>
-    <div class="footer">
+
+    <div class="divisor-2"></div>
+
+    <div class="footer-explore">
         <p>
             Enviando para: Brasil
         </p>
-        <br>
+    <div class="divisor-2"></div>
         <p>
             Idioma: Portuguese
+        </p>
+
+    </div>
+
+    <div class="p-explore">
+        <p>
+            © 2025 Vintage Celest
         </p>
     </div>
 
