atualizacao do index

--- a/index.html
+++ b/index.html
@@ -28,12 +28,32 @@
     <div class="divisor-2"></div>
 
     <div class="img-1">
+        <div class="button-area">
+            <p class="button-title">BAGS</p>
+
+            <div class="button-container">
+                <button class="btn-outline">SHOW ME</button>
+                <button class="btn-solid">SHOP NOW</button>
+            </div>
+        </div>
     </div>
 
     <div class="img-2">
+
+
+        <div class="button-area">
+            <p class="button-title">DRESS SHOE</p>
+
+            <div class="button-container">
+                <button class="btn-outline">SHOW ME</button>
+                <button class="btn-solid">SHOP NOW</button>
+            </div>
+        </div>
     </div>
 
+
     <div class="img-3">
+
     </div>
 
     <hr>
@@ -78,12 +98,14 @@
         <p>
             Enviando para: Brasil
         </p>
-    <div class="divisor-2"></div>
+
         <p>
             Idioma: Portuguese
         </p>
 
     </div>
+
+    <div class="divisor-2"></div>
 
     <div class="p-explore">
         <p>
